// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders progress bar in (invalid data) error stage 1`] = `
<div>
  <div
    class="ui tiny error success progress progress-bar--custom"
    data-percent="0"
  >
    <div
      class="bar"
      style="width: 0%;"
    />
    <div
      class="label"
    >
      Invalid  progress
    </div>
  </div>
</div>
`;

exports[`renders progress bar in (no data) error stage 1`] = `
<div>
  <div
    class="ui tiny error success progress progress-bar--custom"
    data-percent="0"
  >
    <div
      class="bar"
      style="width: 0%;"
    />
    <div
      class="label"
    >
      Invalid  progress
    </div>
  </div>
</div>
`;

exports[`renders progress bar with 0/3 completed 1`] = `
<div>
  <div
    class="ui tiny error progress progress-bar--custom"
    data-percent="0"
  >
    <div
      class="bar"
      style="width: 0%;"
    />
    <div
      class="label"
    >
      0/3 fields complete
    </div>
  </div>
</div>
`;

exports[`renders progress bar with 2/3 completed 1`] = `
<div>
  <div
    class="ui tiny warning progress progress-bar--custom"
    data-percent="66"
  >
    <div
      class="bar"
      style="width: 66.66666666666666%;"
    />
    <div
      class="label"
    >
      2/3 fields complete
    </div>
  </div>
</div>
`;

exports[`renders progress bar with 3/3 completed 1`] = `
<div>
  <div
    class="ui tiny success progress progress-bar--custom"
    data-percent="100"
  >
    <div
      class="bar"
      style="width: 100%;"
    />
    <div
      class="label"
    >
      3/3 fields complete
    </div>
  </div>
</div>
`;
